fix: if unavailable JMX module is simply ignored from the Profiler
Fixed issue #1164