@@ -152,13 +152,6 @@
                         <arg>--add-exports</arg>
                         <arg>java.management/sun.management=ALL-UNNAMED</arg>
                     </compilerArgs>
-                    <!--                    <compilerArgs>-->
-                    <!--                        <arg>&#45;&#45;add-modules</arg>-->
-                    <!--                        <arg>jdk.hotspot.agent</arg>-->
-                    <!--                        <arg>&#45;&#45;add-exports</arg>-->
-                    <!--                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.tools=ALL-UNNAMED</arg>-->
-                    <!--                        <arg>-proc:none</arg>-->
-                    <!--                    </compilerArgs>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -187,6 +180,9 @@
                         </org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener>
                         <polyglot.engine.WarnInterpreterOnly>false</polyglot.engine.WarnInterpreterOnly>
                     </systemPropertyVariables>
+                    <argLine>
+                        --add-exports=java.management/sun.management=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
